--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -47,8 +47,8 @@
 
                 <div class="col-sm-12 text-left">
                     <div class="section-one">
-                        <h1 style="color:white">DEVOPS DASHBOARD</h1>
-                        <h4 style="color:white">Your step towards DevOps Adoption</h4>
+                        <h1>DEVOPS DASHBOARD</h1>
+                        <h4>Your step towards DevOps Adoption</h4>
                         <div class="btn-sec">
                             <button class="btn btn-primary watch-video-btn">WATCH VIDEO</button>
                             <button class="btn btn-primary view-industry-btn">VIEW INDUSTRIES</button>
@@ -68,6 +68,7 @@
                 </div>
                 <div class="box">
                     <h3 class="heading-color">Collaboration</h3>
+                    <hr/>
                     <p class="text-color">Take the silos of people,tools,information & automation, and create a continious delivery environament
                         through collaboration and communication. </p>
                 </div>
@@ -78,6 +79,7 @@
                 </div>
                 <div class="box">
                     <h3 class="heading-color">Culture</h3>
+                    <hr/>
                     <p class="text-color">Cultural shifts are important within teams and at an org. level to support the communication between
                         the roles of development and operations.</p>
                 </div>
@@ -88,6 +90,7 @@
                 </div>
                 <div class="box">
                     <h3 class="heading-color">Integration</h3>
+                    <hr/>
                     <p class="text-color">Continious integration is a practice where developers egularly merge their cdoe changes into a central
                         repository time to time.</p>
                 </div>
@@ -98,6 +101,7 @@
                 </div>
                 <div class="box">
                     <h3 class="heading-color">Innovation</h3>
+                    <hr/>
                     <p class="text-color">Innovation is just as important as the reliable functioning and safety of our products.</p>
                 </div>
             </div>
