--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../app/css/homepage.css">
 </head>
 
@@ -64,7 +65,7 @@
         <hr/>
         <div class="row section-two">
             <div class="col-sm-3 sec-blocks">
-                <div class="circular-img">
+                <div class="circular-img wow zoomIn">
                     <img src="../../app/images/ICO_Collaboration.png" />
                 </div>
                 <div class="box">
@@ -75,7 +76,7 @@
                 </div>
             </div>
             <div class="col-sm-3">
-                <div class="circular-img">
+                <div class="circular-img wow zoomIn">
                     <img src="../../app/images/ICO_culture.png" />
                 </div>
                 <div class="box">
@@ -86,7 +87,7 @@
                 </div>
             </div>
             <div class="col-sm-3">
-                <div class="circular-img">
+                <div class="circular-img wow zoomIn">
                     <img src="../../app/images/ICO_Continous.png" />
                 </div>
                 <div class="box">
@@ -97,7 +98,7 @@
                 </div>
             </div>
             <div class="col-sm-3">
-                <div class="circular-img">
+                <div class="circular-img wow zoomIn">
                     <img src="../../app/images/ICO_innovation.png" />
                 </div>
                 <div class="box">
@@ -116,14 +117,14 @@
             <div class="row">
 
                 <div class="col-sm-3">
-                    <div class="img-box">
+                    <div class="img-box wow zoomIn">
                         <img src="../../app/images/ICO_Plan.png" />
                         <h3 class="img-desc">PLAN</h3>
                     </div>
                     <span class="fa fa-chevron-right"></span>
                 </div>
                 <div class="col-sm-3">
-                    <div class="img-box">
+                    <div class="img-box wow zoomIn">
                         <img src="../../app/images/ICO_code.png" />
 
                         <h3 class="img-desc">CODE</h3>
@@ -131,7 +132,7 @@
                     <span class="fa fa-chevron-right"></span>
                 </div>
                 <div class="col-sm-3">
-                    <div class="img-box">
+                    <div class="img-box wow zoomIn">
                         <img src="../../app/images/ICO_Build.png" />
                         <h3 class="img-desc">BUILD</h3>
                     </div>
@@ -142,7 +143,7 @@
             <div class="row row-two">
 
                 <div class="col-sm-3 mid-cycle">
-                    <div class="img-box">
+                    <div class="img-box wow zoomIn">
                         <img src="../../app/images/ICO_Monitor.png" />
                         <h3 class="monitor img-desc">MONITOR</h3>
                     </div>
@@ -150,28 +151,28 @@
                 </div>
                 <div class="col-sm-3">
                         <span class="fa fa-chevron-left"></span>
-                    <div class="img-box">
+                    <div class="img-box wow zoomIn">
                         <img src="../../app/images/ICO_deploy.png" />
                         <h3 class=" deploy img-desc">DEPLOY</h3>
                     </div>
                 </div>
                 <div class="col-sm-3">
                         <span class="fa fa-chevron-left"></span>
-                    <div class="img-box">
+                    <div class="img-box wow zoomIn">
                         <img src="../../app/images/ICO_release.png" />
                         <h3 class="img-desc">RELEASE</h3>
                     </div>
                 </div>
                 <div class="col-sm-3">
                         <span class="fa fa-chevron-left"></span>
-                    <div class="img-box">
+                    <div class="img-box wow zoomIn">
                         <img src="../../app/images/ICO_test.png" />
                         <h3 class="img-desc">TEST</h3>
                     </div>
                 </div>
                 <div class="col-sm-3 mid-cycle right">
                         <span class="fa fa-chevron-left"></span>
-                        <div class="img-box">
+                        <div class="img-box wow zoomIn">
                             <img class="img-operate" src="../../app/images/ICO_operate.png" />
     
                             <h3 class="img-desc">OPERATE</h3>
@@ -322,6 +323,10 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 
 </body>
 
