tools section changesalong with animation

--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -64,8 +64,8 @@
         <h1 class="four-pillars">Four Pillars</h1>
         <hr/>
         <div class="row section-two">
-            <div class="col-sm-3 sec-blocks">
-                <div class="circular-img wow zoomIn">
+            <div class="col-sm-3 sec-blocks wow zoomIn">
+                <div class="circular-img">
                     <img src="../../app/images/ICO_Collaboration.png" />
                 </div>
                 <div class="box">
@@ -75,8 +75,8 @@
                         through collaboration and communication. </p>
                 </div>
             </div>
-            <div class="col-sm-3">
-                <div class="circular-img wow zoomIn">
+            <div class="col-sm-3 wow zoomIn">
+                <div class="circular-img">
                     <img src="../../app/images/ICO_culture.png" />
                 </div>
                 <div class="box">
@@ -86,8 +86,8 @@
                         the roles of development and operations.</p>
                 </div>
             </div>
-            <div class="col-sm-3">
-                <div class="circular-img wow zoomIn">
+            <div class="col-sm-3 wow zoomIn">
+                <div class="circular-img">
                     <img src="../../app/images/ICO_Continous.png" />
                 </div>
                 <div class="box">
@@ -97,8 +97,8 @@
                         repository time to time.</p>
                 </div>
             </div>
-            <div class="col-sm-3">
-                <div class="circular-img wow zoomIn">
+            <div class="col-sm-3 wow zoomIn">
+                <div class="circular-img">
                     <img src="../../app/images/ICO_innovation.png" />
                 </div>
                 <div class="box">
@@ -235,55 +235,39 @@
             <div class="section-four">
                 <div class="row">
 
-                    <div class="col-sm-4">
-                        <div class="img-box">
-                            <img class="tool_icon" src="../../app/images/TOOL_ICON.png" />
-
+                    <div class="col-sm-4 wow zoomIn">
+                        <div class="circular-img">
+                            <img src="../../app/images/Artboard 1.png" />
+                        </div>
+                        <div class="box">
+                            <h3 class="heading-color">Innovation</h3>
+                            <hr/>
+                            <p class="text-color">Innovation is just as important as the reliable functioning and safety of our products.</p>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="img-box">
-                            <img class="tool_icon2" src="../../app/images/TOOL_ICON_2.png" />
-
-
+                    <div class="col-sm-4 wow zoomIn" data-wow-delay = "0.5s">
+                        <div class="circular-img">
+                            <img src="../../app/images/Artboard 2.png" />
+                        </div>
+                        <div class="box">
+                            <h3 class="heading-color">Innovation</h3>
+                            <hr/>
+                            <p class="text-color">Innovation is just as important as the reliable functioning and safety of our products.</p>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="img-box">
-                            <img class="tool_icon3" src="../../app/images/TOOL_ICON_3.png" />
-
+                    <div class="col-sm-4 wow zoomIn" data-wow-delay = "1s">
+                            <div class="circular-img">
+                                <img src="../../app/images/Artboard 3.png" />
+                            </div>
+                            <div class="box">
+                                <h3 class="heading-color">Innovation</h3>
+                                <hr/>
+                                <p class="text-color">Innovation is just as important as the reliable functioning and safety of our products.</p>
+                            </div>
                         </div>
-                    </div>
-
-
                 </div>
-                <div class="row row-two">
-
-                    <div class="col-sm-4">
-                        <div class="img-box">
-                            <img class="tool_icon4" src="../../app/images/TOOL_ICON_4.png" />
-
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="img-box">
-                            <img src="../../app/images/TOOL_ICON_5.png" />
-
-
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="img-box">
-                            <img src="../../app/images/TOOL_ICON_6.png" />
-
-                        </div>
-                    </div>
-
-                </div>
-
             </div>
         </div>
-        <button class="load-more">Load More</button>
 
         <h1 class="four-pillars">Get In Touch</h1>
         <hr/>
