--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -264,7 +264,7 @@
                                             <hr/>
                                             <div class = "text-wrapper">
                                                 <h3 class="heading-color">Development & Version Control</h3>
-                                                <p class="text-color">Take silos of people, tools, informantion & automation, and create a continuous delivery</p>
+                                                <p class="text-color">Take silos of people, tools, informantion & automation, and create a continuous delivery environment through a facilitated collaboration and communication.</p>
                                             </div>
                                         </div>
                                         <div class="modal-footer">
@@ -303,7 +303,7 @@
                                             <hr/>
                                             <div class = "text-wrapper">
                                                 <h3 class="heading-color">Continuous Integration</h3>
-                                                <p class="text-color">Take silos of people, tools, informantion & automation, and create a continuous delivery</p>
+                                                <p class="text-color">Take silos of people, tools, informantion & automation, and create a continuous delivery environment through a facilitated collaboration and communication</p>
                                             </div>
                                         </div>
                                         <div class="modal-footer">
@@ -342,7 +342,7 @@
                                             <hr/>
                                             <div class = "text-wrapper">
                                                 <h3 class="heading-color">Project Management</h3>
-                                                <p class="text-color">Take silos of people, tools, informantion & automation, and create a continuous delivery</p>
+                                                <p class="text-color">Take silos of people, tools, informantion & automation, and create a continuous delivery environment through a facilitated collaboration and communication</p>
                                             </div>
                                         </div>
                                         <div class="modal-footer">
