industry page changes

--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <title>DevOps Portal</title>
     <meta charset="utf-8">
@@ -8,41 +5,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../app/css/common.css">
     <link rel="stylesheet" href="../../app/css/homepage.css">
 </head>
 
 <body>
+    <header id = "header">
+    </header>
     <div class="bgnd-sec">
-        <nav class="navbar navbar-expand-lg navbar-dark ">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <img class="navlogo" src="../../app/images/navlogo.png" />
-                </li>
-
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link">HOME</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">PILLARS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">CYCLE</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">TOOLS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">CONTACT US</a>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-success">LOGIN</button>
-                </li>
-
-            </ul>
-        </nav>
-
         <div class="container-fluid text-center">
             <section class="row content">
 
@@ -369,36 +339,13 @@
             </div>
 
         </div>
-        <footer class="container-fluid text-center">
-            <nav class="navbar navbar-expand-lg navbar-dark dimgray ">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <img class="navlogo" src="../../app/images/navlogo.png" />
-                    </li>
-
-                </ul>
-                <ul class="navbar-nav" style="padding-left:420px;">
-                    <li class="nav-item">
-                        <a class="nav-link">Help</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link">Report</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link">FAQ's</a>
-                    </li>
-
-
-                </ul>
-            </nav>
-        </footer>
     </div>
+    <footer id = "footer" class="container-fluid text-center">
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
+    <script src="../../app/js/global.js"></script>
 
 </body>
 
