project page and navigation changes

--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../app/css/common.css">
     <link rel="stylesheet" href="../../app/css/homepage.css">
+    <link rel="stylesheet" href="../../app/css/common.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                         <h4>Your step towards DevOps Adoption</h4>
                         <div class="btn-sec">
                             <button class="btn btn-primary watch-video-btn">WATCH VIDEO</button>
-                            <a class="btn btn-primary view-industry-btn" href="app/html/industrypage.html">VIEW INDUSTRIES</a>
+                            <a class="btn btn-primary view-industry-btn" href="../../app/html/industrypage.html">VIEW INDUSTRIES</a>
                         </div>
                     </div>
                 </div>
