--- a/app/html/industrypage.html
+++ b/app/html/industrypage.html
@@ -5,14 +5,15 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="../../app/css/common.css">
         <link rel="stylesheet" href="../../app/css/homepage.css">
+        <link rel="stylesheet" href="../../app/css/common.css">
     </head>
     
     <body>
         <header id = "header">
         </header>
         <div class="bgnd-sec2">
+            <a class="back-to-home" href="../../app/html/homepage.html"><i class="fa fa-arrow-left" aria-hidden="true"></i>Back to Home</a>
             <h1 class="four-pillars">Industries</h1>
             <hr/>
             <div class="row section-four">
@@ -23,6 +24,7 @@
                     <h3 class="text-color">Consumer and Industrial Products</h3>
                     <p class="text-color">Deloitte's financial service industry specialists provide comprehensive,
                             integrated solutions to the banking and securities, insurance and investment management sectors</p>
+                    <a class="btn btn-primary view-project-btn" href="../..app//html/projectpage.html">View Project</a>
                 </div>
             </div>
             <div class="row section-four">
@@ -33,6 +35,7 @@
                     <h3 class="text-color">Life Sciences and Health Care</h3>
                     <p class="text-color">Deloitte's financial service industry specialists provide comprehensive,
                             integrated solutions to the banking and securities, insurance and investment management sectors</p>
+                    <a class="btn btn-primary view-project-btn" href="../../app/html/projectpage.html">View Project</a>
                 </div>
             </div>
             <div class="row section-four">
@@ -43,6 +46,7 @@
                     <h3 class="text-color">Technology, Media and Telecom</h3>
                     <p class="text-color">Deloitte's financial service industry specialists provide comprehensive,
                             integrated solutions to the banking and securities, insurance and investment management sectors </p>
+                    <a class="btn btn-primary view-project-btn" href="../../app/html/projectpage.html">View Project</a>
                 </div>
             </div>
             <div class="row section-four">
@@ -53,6 +57,7 @@
                     <h3 class="text-color">Financial Service Industry</h3>
                     <p class="text-color">Deloitte's financial service industry specialists provide comprehensive,
                      integrated solutions to the banking and securities, insurance and investment management sectors</p>
+                    <a class="btn btn-primary view-project-btn" href="../../app/html/projectpage.html">View Project</a>
                 </div>
             </div>
         </div>
