navigation changes and industry page changes

--- a/app/html/industrypage.html
+++ b/app/html/industrypage.html
@@ -24,7 +24,7 @@
                     <h3 class="text-color">Consumer and Industrial Products</h3>
                     <p class="text-color">Deloitte's financial service industry specialists provide comprehensive,
                             integrated solutions to the banking and securities, insurance and investment management sectors</p>
-                    <a class="btn btn-primary view-project-btn" href="../../app//html/projectpage.html">View Project</a>
+                    <a class="btn btn-primary view-project-btn" href="../../app/html/projectpage.html">View Project</a>
                 </div>
             </div>
             <div class="row section-four">
