--- a/app/html/projectpage.html
+++ b/app/html/projectpage.html
@@ -12,7 +12,7 @@
     <body>
         <header id = "header">
         </header>
-        <button type="button" class="btn btn-default industry-link-btn text-left" style="float:left;margin-top:20px; color:#707070;" >Back to Industries </button>
+        <a href="../../app/html/industrypage.html" class="btn btn-default industry-link-btn text-left" style="float:left;margin-top:20px; color:#707070;" >Back to Industries </a>
 <div class="container text-center background">
          
 
@@ -29,7 +29,7 @@
     </div>
   </form>
         </div>
-  <div  style="margin-left:100px;margin-top:30px;width:900px;" 100px class="row">
+  <div  style="margin-left:100px;margin-top:30px;width:900px;" class="row">
       
     <div class="col-sm-3 logo-grid">
       <div class="logo">
