--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -159,6 +159,8 @@
             <div class="mid-section">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <div class="bg-img">
+                        </div>
                         <div>
                             <img class="img-review" src="../../app/images/PHOTO_MANAGER.png" />
                         </div>
@@ -171,6 +173,8 @@
                         </div>
                     </div>
                     <div class="carousel-item">
+                        <div class="bg-img">
+                        </div>
                         <div>
                             <img class="img-review" src="../../app/images/PHOTO_MANAGER.png" />
                         </div>
@@ -183,6 +187,8 @@
                         </div>
                     </div>
                     <div class="carousel-item">
+                        <div class="bg-img">
+                        </div>
                         <div>
                             <img class="img-review" src="../../app/images/PHOTO_MANAGER.png" />
                         </div>
