--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -345,6 +345,8 @@
 
         </div>
     </div>
+    <div id = "survey" class="container-fluid text-center">
+    </div>
     <footer id = "footer" class="container-fluid text-center">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
