error page and survey changes

--- a/app/html/header.html
+++ b/app/html/header.html
@@ -10,13 +10,13 @@
                 <a class="nav-link">HOME</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">PILLARS</a>
+                <a href="../../app/html/errorPage.html" class="nav-link">PILLARS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">CYCLE</a>
+                <a href="../../app/html/errorPage.html" class="nav-link">CYCLE</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">TOOLS</a>
+                <a href="../../app/html/errorPage.html" class="nav-link">TOOLS</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link">CONTACT US</a>
