--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -19,7 +19,7 @@
                 <div class="col-sm-12 text-left">
                     <div class="section-one">
                         <h1>DEVOPS DASHBOARD</h1>
-                        <h4>Your step towards DevOps Adoption</h4>
+                        <img class="hero-gif" src="../../app/images/DevOps-Portal-Caption.gif" />
                         <div class="btn-sec">
                             <button class="btn btn-primary watch-video-btn">WATCH VIDEO</button>
                             <a class="btn btn-primary view-industry-btn" href="../../app/html/industrypage.html">VIEW INDUSTRIES</a>
