video and error page changes

--- a/app/html/errorPage.html
+++ b/app/html/errorPage.html
@@ -12,8 +12,7 @@
     <body>
         <header id = "header">
         </header>
-        <div class="bgnd-sec2">
-            <h1 class="four-pillars">SORRY FOR THE INCONVENIENCE WE WILL BE BACK SOON</h1>
+        <div class="error-bg">
         </div>
         <footer id = "footer" class="container-fluid text-center">
         </footer>
