get in touch changes

--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -348,13 +348,16 @@
         <h1 class="four-pillars">Get In Touch</h1>
         <hr/>
         <div class="contact-us-div">
-            <div>
-                <textarea>Name</textarea>
-                <textarea>Email</textarea>
-            </div>
-            <div>
-                <textarea class="write-a-msg">Write a message</textarea>
-            </div>
+            <h3 class="heading-color">For Any Queries Please Contact:</h3>
+            <p class="text-color">
+                Monika Goyal <a href="">mogoyal@deloitte.com</a>
+            </p>
+            <p class="text-color">
+                Ankit Saxena <a href="">ankitsaxena7@deloitte.com</a>
+            </p>
+            <p class="text-color">
+                Prashant Kaviparapu <a href="">pkaviparapu@deloitte.com</a>
+            </p>
 
         </div>
     </div>
