tools page changes

--- a/app/html/homepage.html
+++ b/app/html/homepage.html
@@ -254,6 +254,11 @@
                                                 <h3 class="heading-color">Development & Version Control</h3>
                                                 <p class="text-color">Take silos of people, tools, informantion & automation, and create a continuous delivery environment through a facilitated collaboration and communication.</p>
                                             </div>
+                                            <div class = "icon-wrapper">
+                                                <a href=""><img class="col-sm-2" src="../../app/images/Git.png"></a>
+                                                <a href=""><img class="col-sm-2" src="../../app/images/Apache subversion.png"></a>
+                                                <a href=""><img class="col-sm-2" src="../../app/images/Stash.png"></a>
+                                            </div>
                                         </div>
                                         <div class="modal-footer">
                                         
@@ -293,6 +298,11 @@
                                                 <h3 class="heading-color">Continuous Integration</h3>
                                                 <p class="text-color">Take silos of people, tools, informantion & automation, and create a continuous delivery environment through a facilitated collaboration and communication</p>
                                             </div>
+                                            <div class = "icon-wrapper">
+                                                <a href=""><img class="col-sm-2" src="../../app/images/Jenkins.png"></a>
+                                                <a href=""><img class="col-sm-2" src="../../app/images/TeamCity.jpeg"></a>
+                                                <a href=""><img class="col-sm-2" src="../../app/images/Gitlab.png"></a>
+                                            </div>
                                         </div>
                                         <div class="modal-footer">
                                         
@@ -331,6 +341,10 @@
                                             <div class = "text-wrapper">
                                                 <h3 class="heading-color">Project Management</h3>
                                                 <p class="text-color">Take silos of people, tools, informantion & automation, and create a continuous delivery environment through a facilitated collaboration and communication</p>
+                                            </div>
+                                            <div class = "icon-wrapper">
+                                                <a href=""><img class="col-sm-2" src="../../app/images/Rally.png"></a>
+                                                <a href=""><img class="col-sm-2" src="../../app/images/Jira.jpeg"></a>
                                             </div>
                                         </div>
                                         <div class="modal-footer">
